--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,15 @@
 [submodule "engine/default_where"]
   path = engine/default_where
   url = ./engine/default_where
+[submodule "engine/rails_ui"]
+	path = engine/rails_ui
+	url = git@github.com:one-work/rails_ui.git
+[submodule "engine/rails_com"]
+	path = engine/rails_com
+	url = git@github.com:one-work/rails_com.git
+[submodule "engine/rails_auth"]
+	path = engine/rails_auth
+	url = git@github.com:one-work/rails_auth.git
+[submodule "engine/default_form"]
+	path = engine/default_form
+	url = git@github.com:one-work/default_form.git
