--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "engine/default_where"]
   path = engine/default_where
-  url = ./engine/default_where
+  url = git@github.com:one-work/default_where.git
 [submodule "engine/rails_ui"]
   path = engine/rails_ui
   url = git@github.com:one-work/rails_ui.git
